--- a/.github/workflows/tests/playwright.yml
+++ b/.github/workflows/tests/playwright.yml
@@ -9,7 +9,7 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     env:
-      LT_USERNAME: ${{ secrest.LT_USERNAME }}
+      LT_USERNAME: ${{ secretst.LT_USERNAME }}
       LT_ACCESS_KEY: ${{ secrets.LT_ACCESS_KEY }}
     steps:
     - uses: actions/checkout@v4
