--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "playwright",
+  "name": "playwright-test-suite",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "npx playwright test --config=./playwright.config.js"
+  "author": "LambdaTest",
+  "engines": {
+    "node": ">=12.0.0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "description": "Project to run playwright tests using playwright runner on LambdaTest platform",
+  "scripts": {
+    "test": "npx playwright test --config=./playwright.config.js",
+    "testAndroid": "npx playwright test --config=./playwrightAndroid.config.js"
+  },
   "devDependencies": {
-    "@playwright/test": "^1.42.1",
-    "@types/node": "^20.11.28"
+    "@playwright/test": "^1.35.0",
+    "playwright": "^1.35.0"
   }
 }
